@@ -1,3 +1,8 @@
+2015-05-28  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* README.solaris (new): Moved from ../ to here.
+	* Makefile.am: Adapted.
+
 2015-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tlbuild.texi: Add '--disable-synctex'.
